 $Id: ChangeLog,v 1.199 2011/11/17 03:58:38 uehira Exp $

2011-11-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.2.1 released.
	* recvt46 : added '-4' and '-6' options.
	* libwinlog : bump version.

2011-11-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/recvt46 : fixed a bug.

2011-11-13  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.2.0 released.
	* win_m : fixed 'Next' and 'Previous' bottons.

2011-09-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.29 released.
	* prog/ck_ls8800cst : added '-t' option.

2011-09-09  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* prog/ck_ls8800cst : added.

2011-08-02  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.28 released.
	* src/win.c : check channels table.
	* src/chtbl_ck.c : added.
	* man/chtbl_ck.1 : added.

2011-07-28  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.27 released.
	* man/win.1 : updated
	* man/pmon.1 : fixed a typo

2011-07-21  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.26 released.
	* src/udp_dest.c : IPv6 MTU Option : always perform path MTU discovery.

2011-07-20  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.25 released.
	* src/recvt46.c : fixed a bug.
	* src/send_raw46.c : removed obsoleted codes.
	* daemon_mode : fixed scope.

2011-06-01  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.24 (rel-64bit tag) merged into HEAD branch.
	* Old HEAD branch (Version 1.2.12) move to RELENG_1 branch.

2011-05-31  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.24 released.
	* imported 'wincat' and 'shmsimu'
	  developed by TSURUOKA Hiroshi (tsuru@eri.u-tokyo.ac.jp).

2011-05-05  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.23 released.
	* win, win_m : removed two options : -w, -B
	* finalb data : read & write each member of 'struct FinalB'.

2011-03-22  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.22 released.
	* remove autotool related files.