@@ -1,7 +1,8 @@
- $Id: ChangeLog,v 1.199 2011/11/17 03:58:38 uehira Exp $
+ $Id: ChangeLog,v 1.200 2011/11/17 11:19:02 uehira Exp $
 
 2011-11-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* Version 2.2.1 released.
+	* src/win.c : added '-g' oprtion. pass invalid channels table.
 	* recvt46 : added '-4' and '-6' options.
 	* libwinlog : bump version.
 
